[package]
name = "qrcode-actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.9.0"
actix-web = "4.4.0"
dotenv = "0.15.0"
image = "0.23.0"
mockito = "1.2.0"
qrcode = "0.12.0"
regex = "1.9.5"
reqwest = { version = "0.11.20", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
